# semantic-release-cargo

./: .gitignore  .releaserc.json  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml  test.yml
src/: cargo.ts  config.ts  index.ts  prepare.ts  publish.ts  verifyConditions.ts
src/test/: multi-project.ts  single-project.ts
test/multi-project/: Cargo.toml
test/multi-project/project2/: Cargo.toml  Cargo.toml.expected
test/single-project/: Cargo.toml  Cargo.toml.expected
