[package]
name = "project2"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
project1 = { path = "../project1", features = ["event"] }
lb1 = "1.0.2"

[dev-dependencies]
project1 = { path = "../project1", features = ["event", "test"] }
